Javadoc, with modules from eap/master used, before ER3

--- a/pom.xml
+++ b/pom.xml
@@ -387,6 +387,7 @@
                             <goals>
                                 <goal>enforce</goal>
                             </goals>
+                            <phase>none</phase>
                             <configuration>
                                 <rules>
                                     <bannedDependencies>
