--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>9</version>
+      <version>10-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jboss.as</groupId>
