--- a/testsuite/integration/iiop/pom.xml
+++ b/testsuite/integration/iiop/pom.xml
@@ -66,24 +66,17 @@
                     </plugin>
 
                     <!--
-                       Surefire test executions
+                       Failsafe test executions
                     -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
                         <executions combine.children="append">
-
-                            <!-- Disable default-test execution. -->
-                            <execution>
-                                <id>default-test</id>
-                                <goals><goal>test</goal></goals>
-                                <phase>none</phase>
-                            </execution>
                             <!-- Multi node clustering tests. -->
                             <execution>
                                 <id>tests-iiop-multi-node.surefire</id>
-                                <phase>test</phase>
-                                <goals><goal>test</goal></goals>
+                                <phase>integration-test</phase>
+                                <goals><goal>integration-test</goal></goals>
                                 <configuration>
                                     <!-- Tests to execute. -->
                                     <includes>
