--- a/testsuite/integration/multinode/pom.xml
+++ b/testsuite/integration/multinode/pom.xml
@@ -73,20 +73,16 @@
                         </executions>
                     </plugin>
 
-                    <!-- Surefire. -->
+                    <!-- Failsafe. -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
                         <executions combine.children="append">
-
-                            <!-- Disable default-test execution. -->
-                            <execution><id>default-test</id><goals><goal>test</goal></goals><phase>none</phase></execution>
-
                             <!-- Multi-node tests -->
                             <execution>
                                 <id>multinode.surefire</id>
-                                <phase>test</phase>
-                                <goals><goal>test</goal></goals>
+                                <phase>integration-test</phase>
+                                <goals><goal>integration-test</goal></goals>
                                 <configuration>
                                     <includes>
                                         <include>org/jboss/as/test/multinode/**/*TestCase.java</include>
